# evolux-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
infra/dev/: Dockerfile  docker-compose.yml
infra/prod/: Dockerfile  docker-compose.yml  gunicorn.conf.py  nginx.conf.template
src/: __init__.py  settings.py
src/base/: models.py  serializers.py  views.py
src/migrations/versions/: 1d24f5818bdc_.py
src/modules/number/: models.py  serializers.py  views.py
src/modules/user/: models.py  serializers.py  views.py
tests/: test_flask_base.py  test_number.py  test_user.py
